# hackathon2-phase2

./: .gitignore  main.py  pyproject.toml
.qwen/commands/: sp.specify.toml  sp.tasks.toml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
backend/: .dockerignore  Dockerfile  README.md  check_db.py  pyproject.toml
backend/src/api/: auth.py  main.py  todos.py
backend/src/api/models/: responses.py
backend/src/database/: database.py
backend/src/middleware/: auth.py
backend/src/models/: todo.py  user.py
backend/src/services/: auth_service.py  todo_service.py  user_service.py
frontend/: package-lock.json  package.json  tsconfig.json
frontend/.next/: trace
frontend/.next/server/: _error.js  middleware-build-manifest.js  pages-manifest.json
frontend/src/components/: AuthForm.tsx  TodoForm.tsx  TodoItem.tsx  TodoList.tsx
frontend/src/pages/: _app.tsx  dashboard.tsx  index.tsx  signin.tsx  signup.tsx
frontend/src/services/: api.ts  auth.tsx
history/prompts/constitution/: 1-create-evolution-of-todo-constitution.constitution.prompt.md  2-amend-technology-matrix.constitution.prompt.md
history/prompts/fullstack-todo-app/: 1-phase-ii-planning.plan.prompt.md  1-phase-ii-specification.spec.prompt.md  2-tasks-generation.tasks.prompt.md  3-implementation-work.green.prompt.md
specs/002-fullstack-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-fullstack-todo-app/contracts/: todos-api.md
specs/1-phase1-todo-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/todo_app/: controllers.py  main.py  models.py  utils.py  views.py
tests/integration/: test_app_flow.py
tests/unit/: test_controllers.py  test_models.py
(+48 files in other folders)
